# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
"""
'score_test_scenarios' module.
"""

module(
    name = "score_test_scenarios",
    version = "0.3.0",
    compatibility_level = 0,
)

# Starlark language server
bazel_dep(name = "score_starpls_lsp", version = "0.1.0")

# Python rules.
bazel_dep(name = "rules_python", version = "1.0.0")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# C++ GoogleTest dependencies.
bazel_dep(name = "googletest", version = "1.14.0")

# Rust rules.
bazel_dep(name = "rules_rust", version = "0.56.0")

# C/C++ rules.
bazel_dep(name = "rules_cc", version = "0.1.1")

# Rust module dependencies.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "test_scenarios_rust_crates",
    cargo_lockfile = "//test_scenarios_rust:Cargo.lock",
    manifests = [
        "//test_scenarios_rust:Cargo.toml",
    ],
)
use_repo(crate, "test_scenarios_rust_crates")

# C++ base libs.
bazel_dep(name = "score_baselibs", version = "0.1.2")
