# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
"""
'score_test_scenarios' module.
"""

module(
    name = "score_test_scenarios",
    version = "0.3.1",
    compatibility_level = 0,
)

# Starlark language server
bazel_dep(name = "score_starpls_lsp", version = "0.1.0", dev_dependency = True)

# Python rules.
bazel_dep(name = "rules_python", version = "1.7.0", dev_dependency = True)

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# C++ GoogleTest dependencies.
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)

# Rust rules.
bazel_dep(name = "rules_rust", version = "0.67.0")

# C/C++ rules.
bazel_dep(name = "rules_cc", version = "0.2.14")

# Rust module dependencies.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)

# Json for C++.
bazel_dep(name = "nlohmann_json", version = "3.12.0")

# Score Rust crates.
bazel_dep(name = "score_crates", version = "0.0.6")
