[project]
name = "testing-utils"
version = "0.1.0"
dependencies = ["pytest"]
requires-python = ">=3.12"
authors = [
  { name = "Igor Ostrowski", email = "igor.ostrowski.ext@qorix.ai" },
  { name = "Piotr Korkus", email = "piotr.korkus.ext@qorix.ai" },
  { name = "Arkadiusz Jędrzejewski", email = "arkadiusz.jedrzejewski.ext@qorix.ai" },
]
description = "Test framework tools and helpers for performance stack project."
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["ruff"]
